--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
 	<br>My line break</br>
 
+	<h1>Heading 1</h1>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
