add unordered list

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,11 @@
 	<h5>Heading 5</h5>
 	<h6>Heading 6</h6>
 
+	<ul>
+		<li>unordered list item 1</li>
+		<li>unordered list item 2</li>
+	</ul>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
