--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
 		<li>unordered list item 1</li>
 		<li>unordered list item 2</li>
 	</ul>
+	
+	<img
+	src="http://vignette4.wikia.nocookie.net/adventuretimewithfinnandjake/images/7/75/Funny-gif-potatoes-dancing.gif/revision/latest?cb=20130211151032">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
