--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,17 @@
 	
 	<img
 	src="http://vignette4.wikia.nocookie.net/adventuretimewithfinnandjake/images/7/75/Funny-gif-potatoes-dancing.gif/revision/latest?cb=20130211151032">
+	
+	<table>
+		<tr>
+			<td>Dennis</td>
+			<td>Sesma</td>
+		</tr>
+		<tr>
+			<td>Bob</td>
+			<td>Sanchaz</td>
+		</tr>
+	</table>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
